Create instances of Teller classes for testing
Teller classes implemented:
OnlineCacheState
LocalCacheState
OnlineRepository.RefreshResult

Add requirements property to LocalCacheState

Create tests in example app to show how to write tests for Teller.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             tools:text="Data last synced 5 minutes ago"
             android:gravity="end"/>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/repos_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
