Improve paging implementation
After adding paging example to example app, found some ways to improve the library for paging.

--- a/app/src/main/res/layout/fragment_paging.xml
+++ b/app/src/main/res/layout/fragment_paging.xml
@@ -1,11 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/frag_paging_parent_view">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/data_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Paging"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/data_age_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Data last synced 5 minutes ago"
+            android:gravity="end"/>
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/comments_refresh_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/comments_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/empty_view_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="There are no repos."/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/loading_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading repos..."/>
+    </LinearLayout>
 
 </LinearLayout>
